--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>First Button</h2>
+
+<p id="test">I haven't been clicked</p>
+
+<button type="button" onclick="test()">Click me</button>
+
+<script src="button.js"></script>
+</body>
+</html>
