--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-bs-toggle="dropdown">
+                            Resume
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item js-scroll-trigger" href="index.html#about">About</a>
+                            <a class="dropdown-item js-scroll-trigger" href="index.html#experience">Experience</a>
+                            <a class="dropdown-item js-scroll-trigger" href="index.html#education">Education</a>
+                            <a class="dropdown-item js-scroll-trigger" href="index.html#skills">Skills</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="abstract.html">Abstract</a> </li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
@@ -47,10 +59,12 @@
                         2100 S Mobberly Ave · Longview, TX 75602 · (704) 612-1261 ·
                         <a href="mailto:danielpayne@letu.edu">danielpayne@letu.edu</a>
                     </div>
-                    <p class="lead mb-5"> Brief description about myself </p>
+                    <p class="lead mb-5"> Hi, I'm Daniel. I am currently a graduate student at LeTourneau University where I am studying Electrical Engineering. I am currently working on my thesis which I will finish in the summer of 2022, you can read my abstract <a href="abstract.html">here</a>. 
+                                             </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/danielstealthpayne/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/dpayne6714"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="/assets/Resume.pdf" download="/assets/Resume.pdf"><i class="fas fa-file-pdf"></i></a>
                     </div>
                 </div>
             </section>
@@ -61,9 +75,50 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Intern</h3>
+                            <h3 class="mb-0">Graduate Research Intern</h3>
                             <div class="subheading mb-3">LeTourneau University</div>
-                            <p>Job Description</p>
+                            <ul class="fa-ul mb-2">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Engaged in proof-of-concept research for Sandia National labs
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Participated in development of static GPS testing range on the ISM band and robust GPS attacker using custom built software defined radios
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Programmed STM32 ARM Micro Controller Unit in C to manage data communications with computer and Radio Frequency Front End
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Programmed Complex Programmed Logic Device (CPLD) in VHDL to construct base band and handle clocks
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Developed custom data transfer protocols to transfer between Micro Controller and CPLD under strict timing parameters
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Configured board hardware with SPI interface
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Writing C++ classes to calculate receiver clock coefficients to be used in navigation data
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Writing Linux Kernel Module to handle USB communications
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Collaborated with various sub teams to fulfill project goals
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Currently working towards thesis
+                                </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2020 - Present</span></div>
                     </div>
@@ -71,7 +126,28 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Science Intern</h3>
                             <div class="subheading mb-3">Rely-Ability Risk Management</div>
-                            <p>Job Description</p>
+                            <ul class="fa-ul mb-2">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Conducted, presented, reported, and documented independent research with support from senior developer
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Used Microsoft Azure ML Studio to develop price optimization regression models
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Used Keras Neural Network and TensorFlow to develop predictive maintenance models
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Developed applications to indict insight from AI models and display the predictions in a live dashboard using various Azure services
+                                </li>
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Worked IT support managing ticketing database for Kaaboo Dallas
+                                </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2019</span></div>
                     </div>
@@ -95,8 +171,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">LeTourneau University</h3>
                             <div class="subheading mb-3">Bachelors of Science</div>
-                            <div>Machanical Engineering with Computer Science and Mathematics Minors</div>
-                            <p>GPA: 3.66</p>
+                            <div>Mechanical Engineering with Computer Science and Mathematics Minors</div>
+                            <p>GPA: 3.6</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
@@ -156,6 +232,14 @@
                             <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                             Microsoft Azure
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                            Docker
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                            Kubernetes
+                        </li>
                     </ul>
                     <div class="subheading mb-2">Software</div>
                     <ul class="fa-ul mb-2">
@@ -197,6 +281,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                             Algorithms
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                            Object Oriented Programming 
                         </li>
                     </ul>
                 </div>
